# building-with-llms-pycon-2025

./: explore.py  pep-qa.sh  peps.db  pyproject.toml  text_to_sql.py
